# rustyhub

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  appveyor_rust_install.ps1  doc-push.sh  id_rsa.enc  index.html
hyper/: struct.Url.html
hyper/header/: struct.HeadersItems.html
rustyhub/: index.html  search-index.js
rustyhub/activity/: index.html  sidebar-items.js
rustyhub/auth/: index.html  sidebar-items.js
rustyhub/client/: sidebar-items.js  struct.Client.html
rustyhub/common/: index.html  sidebar-items.js  struct.Repository.html  struct.User.html
rustyhub/error/: GithubError.t.html  GithubErrorErrors.t.html  enum.Error.html  index.html  sidebar-items.js  struct.GithubError.html  struct.GithubErrorErrors.html
rustyhub/miscellaneous/: sidebar-items.js
rustyhub/rustyhub/: sidebar-items.js
rustyhub/serde_derive/: fn.derive_deserialize.html
rustyhub/url/: struct.HostAndPort.html  struct.SocketAddrs.html  struct.Url.html  struct.UrlQuery.html
rustyhub/utils/: fn.request_endpoint.html  fn.request_endpoint_with_headers.html  index.html  request_endpoint.v.html
serde_derive/: fn.derive_serialize.html  index.html
src/: client.rs  common.rs  error.rs  lib.rs  utils.rs
src/activity/: common.rs  events.rs  feeds.rs  mod.rs  notifications.rs  starring.rs  watching.rs
src/auth/: auth.rs  mod.rs
src/bitflags/: lib.rs.html
src/cookie/: jar.rs.html  lib.rs.html
src/dtoa/: diyfp.rs.html  dtoa.rs.html  lib.rs.html
src/gists/: comments.rs  mod.rs
src/git_data/: blobs.rs  commits.rs  mod.rs  references.rs  tags.rs  (+1 more)
url/: index.html
(+473 files in other folders)
