[package]
name = "rustyhub"
version = "0.3.0"
description = "A client for the Github v3 API"
documentation = "https://cyberunner23.github.io/rustyhub/rustyhub/index.html"
repository = "https://github.com/Cyberunner23/rustyhub"
authors = ["Cyberunner23 <cyberunner23@protonmail.com>"]
keywords = ["github", "api", "v3", "rest"]
license = "MIT OR Apache-2.0"


[dependencies]
hyper = "0.11"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
